# get_urdf_deps

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: get_urdf_and_deps.launch
scripts/: create_def_proj  get_mesh_deps  save_urdf  utilities.py
